objects/ASI_eForm_Route_Rule_Details__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_eForm_Route_Rule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Note__c</fullName>
        <label>Approver Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preview Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Route_Type__c</fullName>
        <label>Route Type</label>
        <referenceTo>ASI_eForm_Route_Type__c</referenceTo>
        <relationshipLabel>ASI eForm Route Rule Details</relationshipLabel>
        <relationshipName>ASI_eForm_Route_Rule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sys_Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI eForm Route Rule Details</label>
    <nameField>
        <displayFormat>RRDID-{0000000}</displayFormat>
        <label>Route Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI eForm Route Rule Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_HK_Not_Allow_Approver_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(),!ASI_eForm_Preview_Approver__c,  ASI_eForm_Route_Type__r.RecordType.DeveloperName = &quot;ASI_eForm_HK_Route_Type&quot;,
 
OR(
AND(ISPICKVAL( ASI_eForm_Route_Type__r.ASI_eForm_Form_Type__c , &quot;IT Change Request&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 3),

AND(ISPICKVAL( ASI_eForm_Route_Type__r.ASI_eForm_Form_Type__c , &quot;Pre-Trip Approval&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 0),

AND(ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;Hardware &amp; Software Request (HK)&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 3),

AND(ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;IT Service Request (HK)&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 1),

AND(ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;New Employee Temporary (HK)&quot;) || ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;New Employee Permanent (HK)&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 1),

AND(ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;Remove ID (HK)&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 1),

AND(ISPICKVAL(  ASI_eForm_Route_Type__r.ASI_eForm_Form_Record_Type__c , &quot;Change Profile (HK)&quot;), ASI_eForm_Route_Type__r.ASI_eForm_Sys_Approver_Count__c &gt;= 0)

)
)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Approver__c</errorDisplayField>
        <errorMessage>You are NOT allowed to create additional approvers for this type of form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_HK_Not_Allow_Reviewer_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW(), ASI_eForm_Preview_Approver__c, ASI_eForm_Route_Type__r.RecordType.DeveloperName = &quot;ASI_eForm_HK_Route_Type&quot;,  
 ASI_eForm_Route_Type__r.ASI_eForm_Sys_Preview_Approver_Count__c &gt;=1 
)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Approver__c</errorDisplayField>
        <errorMessage>You are NOT allowed to create additional preview approvers for this type of form</errorMessage>
    </validationRules>
</CustomObject>